[tool.poetry]
name = "phillip"
version = "0.3.0"
description = "A basic wrapper for osu! beatmapset events."
authors = ["Rendy Arya Kemal <rendyarya22@gmail.com>"]
license = "LGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6.2"
asyncio-throttle = "^1.0.1"
beautifulsoup4 = "^4.9.1"
pyee = "^8.0.1"

[tool.poetry.dev-dependencies]
mkdocs = "^1.1.2"
mkdocs-material = "^5.5.13"
pymdown-extensions = "^8.0"
mkdocstrings = "^0.13.2"
pytest = "^6.1.0"
pytest-asyncio = "^0.14.0"
isort = "^5.5.3"
aioresponses = "^0.6.4"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
