[tool.poetry]
name = "phillip"
version = "1.0"
description = "A basic wrapper for osu! beatmapset events."
authors = ["Rendy Arya Kemal <rendyarya22@gmail.com>"]
license = "LGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.2"
asyncio-throttle = "^1.0.1"
beautifulsoup4 = "^4.9.3"
pyee = "^8.1.0"
mkdocs = {version = "^1.1.2", extras = ["docs"]}
pymdown-extensions = {version = "^8.0.1", extras = ["docs"]}
mkdocs-material = {version = "^6.0.2", extras = ["docs"]}
mkdocstrings = {version = "^0.13.6", extras = ["docs"]}

[tool.poetry.dev-dependencies]
mkdocs = "^1.1.2"
mkdocs-material = "^6.0.2"
pymdown-extensions = "^8.0"
mkdocstrings = "^0.13.2"
pytest = "^6.1.2"
pytest-asyncio = "^0.14.0"
isort = "^5.6.4"
aioresponses = "^0.6.4"
flake8 = "^3.8.4"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
